# hikdetect

./: CMakeLists.txt  README.md
include/: camera.h  hikdetect.h
python/: hikOpenCV.py
scripts/: build.sh  run.sh
src/: camera.cpp  main.cpp
